[package]
name = "classer"
version = "0.1.0"
edition = "2024"

[dependencies]
crevice = "*"
ggez = "0.10.0-rc0"
nalgebra = "0.34.1"
strum = { version = "0.27.2", features = ["derive"] }
ipm = { git = "https://github.com/MarkV43/ipm.git" }
classer-opt = { git = "https://github.com/MarkV43/classer-opt.git" }
